@@ -18,6 +18,7 @@ depth: 1
  * Ensure comment buttons always respect `WAGTAILADMIN_COMMENTS_ENABLED` (Thibaud Colas)
  * Fix error when deleting a single snippet through the bulk actions interface (Sage Abdullah)
  * Pass the correct `for_update` value for `get_form_class` in `SnippetViewSet` edit views (Sage Abdullah)
+ * Move comment notifications toggle to the comments side panel (Sage Abdullah)
 
 ### Documentation
 
