@@ -14,17 +14,6 @@
                 {% endif %}
             {% endfor %}
         </div>
-
-        {# Comment Notifications Toggle  #}
-        {% if self.form.show_comments_toggle %}
-            <div class="w-relative w-flex w-justify-end w-px-5 sm:w-py-1 sm:w-px-2 w-mr-6 sm:w-mr-8 sm:w-mt-12 w-bg-surface-page" data-comment-notifications hidden>
-                <label class="switch w-p-0 w-m-0 w-font-normal w-flex w-justify-between w-text-14 w-space-x-2">
-                    {% trans "Comment notifications" %}
-                    {{ self.form.comment_notifications }}
-                    <span class="switch__toggle"></span>
-                </label>
-            </div>
-        {% endif %}
     </div>
 
     <div class="tab-content">
